--- a/client/src/pages/Contact/Contact.scss
+++ b/client/src/pages/Contact/Contact.scss
@@ -54,7 +54,7 @@
     background-color: $secondary-color-2;
     color: $secondary-color-1;
     width: 50%;
-    margin: auto;
+    margin-left: 25%;
     height: 4rem;
     border-radius: 50px;
     font-size: 2rem;
