--- a/client/src/partials/_animations.scss
+++ b/client/src/partials/_animations.scss
@@ -1,12 +1,13 @@
 
 @keyframes slide {
-  0%,
-  100% {
+  0% {
     transform: translate(0, 0);
   }
-
   50% {
     transform: translate(10px, 0);
+  }
+  100% {
+    transform: translate(0, 0);
   }
 }
 
