--- a/client/src/partials/_global.scss
+++ b/client/src/partials/_global.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cantata+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 
 
 html {
@@ -10,4 +11,8 @@ html {
 
 h1 {
   font-family: 'Cantata One', serif;;
+}
+
+p {
+  font-family: 'Ubuntu', sans-serif;
 }
